WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
78624
fill-opacity does not render properly on chromium mac
https://bugs.webkit.org/show_bug.cgi?id=78624
Summary
fill-opacity does not render properly on chromium mac
Kelly Norton
Reported
2012-02-14 12:18:08 PST
See:
http://code.google.com/p/chromium/issues/detail?id=45747
Attachments
Patch
(18.67 KB, patch)
2012-02-14 12:25 PST
,
Kelly Norton
no flags
Details
Formatted Diff
Diff
Patch
(18.64 KB, patch)
2012-02-15 11:23 PST
,
Kelly Norton
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Kelly Norton
Comment 1
2012-02-14 12:25:23 PST
Created
attachment 127017
[details]
Patch
Cary Clark
Comment 2
2012-02-14 12:36:40 PST
LGTM
Stephen White
Comment 3
2012-02-15 08:01:46 PST
Looks good. r=me
WebKit Review Bot
Comment 4
2012-02-15 08:36:16 PST
Comment on
attachment 127017
[details]
Patch Rejecting
attachment 127017
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: e/WebCore/ChangeLog CONFLICT (content): Merge conflict in Source/WebCore/ChangeLog Failed to merge in the changes. Patch failed at 0001 [CMake] Move RunLoop to WebCore/platform When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at Tools/Scripts/update-webkit line 164. Full output:
http://queues.webkit.org/results/11518869
Kelly Norton
Comment 5
2012-02-15 11:23:51 PST
Created
attachment 127202
[details]
Patch
WebKit Review Bot
Comment 6
2012-02-15 12:33:58 PST
Comment on
attachment 127202
[details]
Patch Rejecting
attachment 127202
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/LayoutTests/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://queues.webkit.org/results/11528304
Stephen White
Comment 7
2012-02-15 12:35:48 PST
Comment on
attachment 127202
[details]
Patch Still looks good. r=me
WebKit Review Bot
Comment 8
2012-02-15 13:29:50 PST
Comment on
attachment 127202
[details]
Patch Rejecting
attachment 127202
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: --chromium', '--force-update']" exit_code: 2 Updating OpenSource git.webkit.org[0: 17.254.20.231]: errno=Connection refused fatal: unable to connect a socket (Connection refused) Died at Tools/Scripts/update-webkit line 162. Failed to run "['Tools/Scripts/update-webkit', '--chromium', '--force-update']" exit_code: 2 Updating OpenSource git.webkit.org[0: 17.254.20.231]: errno=Connection refused fatal: unable to connect a socket (Connection refused) Died at Tools/Scripts/update-webkit line 162. Full output:
http://queues.webkit.org/results/11526385
WebKit Review Bot
Comment 9
2012-02-15 18:16:04 PST
Comment on
attachment 127202
[details]
Patch Clearing flags on attachment: 127202 Committed
r107864
: <
http://trac.webkit.org/changeset/107864
>
WebKit Review Bot
Comment 10
2012-02-15 18:16:08 PST
All reviewed patches have been landed. Closing bug.
Stephen Chenney
Comment 11
2012-04-17 11:12:50 PDT
Committed
r114398
: <
http://trac.webkit.org/changeset/114398
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug