fill-opacity does not render properly only on Chromium Mac. https://bugs.webkit.org/show_bug.cgi?id=78624

Reviewed by Stephen White.

Source/WebCore:

Test: svg/text/text-fill-opacity.svg

* platform/graphics/skia/FontSkia.cpp:
(WebCore::Font::drawGlyphs):

LayoutTests:

* platform/chromium-linux/svg/text/text-fill-opacity-expected.png: Added.
* platform/chromium-linux/svg/text/text-fill-opacity-expected.txt: Added.
* platform/chromium/test_expectations.txt:
* svg/text/text-fill-opacity.svg: Added.


Canonical link: https://commits.webkit.org/95702@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107864 268f45cc-cd09-0410-ab3c-d52691b4dbfc